--- a/src/version2.html
+++ b/src/version2.html
@@ -153,7 +153,7 @@
                     <div class="col totaal"></div>
                 </div>
                 <div class="row" id="activiteiten">
-                    <div class="col beschrijving">Activiteiten & Ontmoeting</div>
+                    <div class="col beschrijving">deelname activiteiten en/of bezoek ontmoetingsruimte</div>
                     <div class="col">
                         <label class="actBox">
                             <input type="checkbox">
