--- a/src/version2.html
+++ b/src/version2.html
@@ -41,6 +41,9 @@
                 </div>
                 <div class="col" id="BP">
                     <div id="bpCont">
+                        <div id="budgetCats">
+                            <span>?</span>
+                        </div>
                         <label for="bValue">B</label>
                         <input id="bValue" placeholder="0" type="text" tabindex="4">
                         <label for="pValue">/ P</label>
