--- a/src/version2.html
+++ b/src/version2.html
@@ -132,12 +132,12 @@ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMA
                     <label for="rWoon">Woonbegeleiding</label>
                     <input id="rIndiv" value="indiv" name="tabelR" type="radio">
                     <label for="rIndiv">Individuele Begeleiding</label>
+                    <input id="rPak" value="Begeleid werk" name="tabelR" type="radio">
+                    <label for="rPak">Begeleid werk</label>
                     <input id="rBw" value="Bwaarden" name="tabelR" type="radio">
                     <label for="rBw">B-waarden</label>
                     <input id="rPw" value="Pwaarden" name="tabelR" type="radio">
                     <label for="rPw">P-waarden</label>
-                    <input id="rPak" value="Pakketten" name="tabelR" type="radio">
-                    <label for="rPak">Pakketten</label>
                 </div>
             </div>
             <table class="container"></table>
