--- a/src/version2.html
+++ b/src/version2.html
@@ -190,7 +190,7 @@ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMA
                 </div>
 
                 <div id="psychoRow" class="row">
-                    <div class="col beschrijving">Psychosociale Ondersteuning</div>
+                    <div class="col beschrijving">Individuele Ondersteuning</div>
                     <div class="col wekelijks row">
                         <div id="psycho" class="col-3">
                             <input eenheid="uren" type="text">
@@ -218,7 +218,7 @@ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMA
                     </div>
                     <div class="col minmax row">
                         <div class="col-3">
-                            <input class="total" type="text" tabindex="99">
+                            <input class="total" type="text" tabindex="999">
                         </div>
                         <div class="col-9"></div>
                     </div>
