--- a/src/version2.html
+++ b/src/version2.html
@@ -225,8 +225,11 @@ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMA
                     </div>
 
                     <div class="row" id="dag_inc_activiteiten">
-                        <div class="col-10 beschrijving" style="text-align: right;">
+                        <div class="col-5 beschrijving">
                             Dagondersteuning inclusief activiteiten: 
+                        </div>
+                        <div class="col-5 info">
+                            
                         </div>
                         <div class="col tussen"></div>
                     </div>
